--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
-<nav-bar></nav-bar>
-<modal (close)="closeModal()"></modal>
-<button mat-stroked-button (click)="onCardClick()">Show Modal</button>
+<!-- <nav-bar></nav-bar>-->
+<nav-bar input="text" (keyup)="enterText($event)"></nav-bar>
+<modal *ngIf="showModal" (close)="closeModal()"></modal>
+
+<!--<button mat-stroked-button (click)="onCardClick()">Show Modal</button>-->
 
 <!-- add code here for cards -->
+<cards (click)="onCardClick()"></cards>
+
